update page create customers in cms, add verify JWT token
