# app/Http/Controllers/APIController.php
@@ -163,6 +163,91 @@ class APIController extends Controller
      *      )
      * ),
      * 
+     *  @SWG\Post(
+     *     path="/api/v1/customer/attendance",
+     *     tags={"Feature"},
+     *     security = { { "bearerAuth": {} } },
+     *     summary="Get a JWT via given credentials",
+     *     description="Returns a JWT token",
+     *     produces={"application/json"},
+     *     @SWG\Parameter(
+     *         name="email",
+     *         in="formData",
+     *         description="Email address",
+     *         required=true,
+     *         type="string"
+     *     ),
+     *     @SWG\Parameter(
+     *         name="password",
+     *         in="formData",
+     *         description="Password",
+     *         required=true,
+     *         type="string"
+     *     ),
+     *     @SWG\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @SWG\Header(
+     *             header="Authorization",
+     *             description="Bearer {token}",
+     *             type="string"
+     *         ),
+     *         @SWG\Schema(
+     *             type="object",
+     *             @SWG\Property(
+     *                 property="error",
+     *                 type="boolean",
+     *                 example=false
+     *             ),
+     *             @SWG\Property(
+     *                 property="data",
+     *                 type="object",
+     *                 @SWG\Property(
+     *                     property="access_token",
+     *                     type="string",
+     *                     example="eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOjEsImlzcyI6Imh0dHA6Ly9sb2NhbGhvc3QvYXBpL2xvZ2luIiwiaWF0IjoxNjIwNjIxNjA4LCJleHAiOjE2MjA2Mjc2MDgsIm5iZiI6MTYyMDYyMTYwOCwianRpIjoiTzRVMTM4Q2Fpd1JjM2lxbSJ9.SD_iJmpMSjcnhldl-SP_Gb0Lv9pTde0J32A-JfKzZoU"
+     *                 ),
+     *                 @SWG\Property(
+     *                     property="token_type",
+     *                     type="string",
+     *                     example="bearer"
+     *                 ),
+     *                 @SWG\Property(
+     *                     property="expires_in",
+     *                     type="integer",
+     *                     example=3600
+     *                 )
+     *             )
+     *         )
+     *     ),
+     *      @SWG\Response(
+     *         response=400,
+     *         description="Invalid request data",
+     *         @SWG\Schema(
+     *             type="object",
+     *             @SWG\Property(
+     *                 property="error",
+     *                 type="boolean",
+     *                 example=true
+     *             ),
+     *             @SWG\Property(
+     *                 property="message",
+     *                 type="object",
+     *                 example={"email": {"The email field is required."}}
+     *             ),
+     *             @SWG\Property(
+     *                 property="type",
+     *                 type="integer",
+     *                 example=400
+     *             )
+     *         )
+     *     ),
+     *     @SWG\Response(
+     *         response=401,
+     *         description="Unauthorized"        
+     *      )
+     *  ),
+     * 
      * @SWG\Definition(
      *      definition="Customer",
      *      type="object",
